# StockChatBot

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
static/: style.css
templates/: chat.html
tests/: test_chat.py
